--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -24,6 +24,7 @@ $font-family-sans-serif: "Trebuchet MS", "Courier", -apple-system,
   sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
   "Noto Color Emoji" !default;
 $headings-font-family: "Bree Serif", serif !default;
+$browser-context: 16;
 
 // Variaveis
 $rosa: #e50051;
