--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -11,8 +11,14 @@ body {
 }
 
 body {
+  height: 100vh;
+  width: 100%;
   background: #000;
   -webkit-font-smoothing: antialiased !important;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 3em 5em;
 }
 
 body,
@@ -25,4 +31,11 @@ button {
 
 button {
   cursor: pointer;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: $headings-font-family;
 }
