--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,6 +1,4 @@
 nav {
-  padding: 0 5em;
-  margin-top: 2%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -12,6 +10,52 @@ nav {
 
     p {
       margin-right: 2em;
+    }
+  }
+}
+
+header {
+  .background {
+    &_eye {
+      position: absolute;
+      z-index: -1;
+      bottom: 40%;
+      left: 0%;
+      transform: rotate(-22deg);
+      width: 50%;
+      height: auto;
+    }
+
+    &_detail_magenta {
+      position: fixed;
+      z-index: -1;
+      top: 0%;
+      right: -13%;
+    }
+
+    &_detail_amarelo {
+      position: fixed;
+      z-index: -1;
+      bottom: 10%;
+      left: -12%;
+    }
+  }
+
+  .header {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 50px;
+    justify-content: center;
+    align-items: center;
+
+    &_heading {
+      font-size: em(50);
+      line-height: em(20);
+    }
+
+    &-chat {
+      height: 80vh;
     }
   }
 }
